WOLEET-1738 Add a button to copy proofkeeper configuration
