# server/src/api/serialize/server-config.ts
@@ -3,6 +3,7 @@ export function serializeServerConfig(config: InternalServerConfigObject): ApiSe
     fallbackOnDefaultKey,
     defaultKeyId,
     identityURL,
+    signatureURL,
     APIURL,
     logoURL,
     HTMLFrame,
@@ -38,6 +39,7 @@ export function serializeServerConfig(config: InternalServerConfigObject): ApiSe
     fallbackOnDefaultKey,
     defaultKeyId,
     identityURL,
+    signatureURL,
     APIURL,
     logoURL,
     HTMLFrame,
